--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
   </head>
-  <body class="background-cover">
+  <body>
     <div>
       <header>
         <nav class="nav-grid center-nav">
@@ -202,6 +202,14 @@
           </div>
         </nav>
       </header>
+      <section>
+        <div class="dashboard desktop-hide">
+          <img src="images/osio.png">
+        </div>
+        <div class="dashboard mobile-hide">
+          <img src="images/osio_home_mobile.png">
+        </div>
+      </section>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
