--- a/index.html
+++ b/index.html
@@ -46,33 +46,34 @@
                 <div id="centerNavBase">
                   <ul class="center-nav--user-list">
                     <li class="center-nav--user-list_section">
-                      <p class="mobile-hide">
-                        <div class="input-group input-group-search">
-                          <input type="text" class="form-control" placeholder="Search for...">
-                          <span class="input-group-btn">
-                            <button class="btn btn-default" type="button"><span class="fa fa-search"></span></button>
-                          </span>
-                        </div>
-                      </p>
-                      <p class="mobile-hide">RECENT SPACES</p>
-                      <ul>
-                        <li>
-                          <a href="pages/page1.html">
-                            osio_uxd
-                          </a>
-                        </li>
-                        <li>
-                          <a href="#">
-                            openshift.io
-                          </a>
-                        </li>
-                        <li>
-                          <a href="#">
-                            iPaaS
-                          </a>
-                        </li>
-                      </ul>
-                      <!-- /input-group -->
+                      <span class="mobile-hide">
+                        <p>
+                          <div class="input-group input-group-search">
+                            <input type="text" class="form-control" placeholder="Search for...">
+                            <span class="input-group-btn">
+                              <button class="btn btn-default" type="button"><span class="fa fa-search"></span></button>
+                            </span>
+                          </div>
+                        </p>
+                        <p>RECENT SPACES</p>
+                        <ul>
+                          <li>
+                            <a href="pages/page1.html">
+                              osio_uxd
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#">
+                              openshift.io
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#">
+                              iPaaS
+                            </a>
+                          </li>
+                        </ul>
+                      </span>
                       <p>SYSTEM STATUS</p>
                       <ul>
                         <li>
