--- a/pages/page1.html
+++ b/pages/page1.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/patternfly/3.24.0/css/patternfly-additions.min.css">
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Overpass+Mono" rel="stylesheet">
+    <!-- Animate.CSS Library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <!-- Theme CSS -->
     <link href="../css/site.min.css" rel="stylesheet">
     <link href="../css/mobile.min.css" rel="stylesheet">
@@ -43,7 +45,8 @@
             <div class="dropdown">
               <div class="center-nav--right">
                 <a id="spacesDropdown" class="btn btn-link" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <span class="pficon-ok fa-lg"></span>
+                  <!-- <span class="pficon-ok fa-lg"></span> -->
+                  <span class="fa fa-th-large fa-lg"></span>
                 </a>
                 <ul class="dropdown-menu center-nav--spaces-dropdown_list left-dropdown" aria-labelledby="spacesDropdown">
                   <div id="spacesDropdownBase">
@@ -72,11 +75,11 @@
                               <span class="fa fa-plus-circle"></span> Create Space?
                             </a>
                           </li>
-                          <li>
+                          <!-- <li>
                             <a href="#">
                               <span class="fa fa-th"></span> About OpenShift.io
                             </a>
-                          </li>
+                          </li> -->
                         </ul>
                       </li>
                     </ul>
