--- a/usersettings.html
+++ b/usersettings.html
@@ -12,17 +12,14 @@
     <!-- Theme CSS -->
     <link href="css/site.min.css" rel="stylesheet">
   </head>
-  <body class="background-cover">
+  <body class="background-cover-user-settings">
     <nav class="nav-grid space-navigation">
       <div>
       </div>
       <div class="nav-grid-center">
         <div id="centerMenu" class="center-menu">
           <div class="user-dropdown">
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-user fa-stack-1x fa-inverse"></i>
-            </span> <b>bdellasc</b> <span class="fa fa-angle-down"></span>
+            <span class="fa fa-home"></span> <b>bdellasc</b> <span class="fa fa-angle-down"></span>
           </div>
           <div class="center-menu-content hide knockout-top-to-bottom">
             <ul>
@@ -98,8 +95,8 @@
       <div>
       </div>
       <div class="secondary-nav--links">
-        <a href="index.html" class="active">Dashboard</a>
-        <a href="usersettings.html">User Settings</a>
+        <a href="index.html">Dashboard</a>
+        <a href="usersettings.html" class="active">User Settings</a>
       </div>
       <div>
       </div>
