continued updates for testing

--- a/AllSpaces.html
+++ b/AllSpaces.html
@@ -15,7 +15,7 @@
   <body class="background-cover-all-spaces">
     <nav class="nav-grid space-navigation">
       <div class="nav-grid-left">
-        <a href="index.html"><span class="fa fa-home"></span></a> | <span class="fa fa-angle-down"></span>
+        <a href="index.html"><span class="fa fa-home"></span></a>
       </div>
       <div class="nav-grid-center">
         <div id="centerMenu" class="center-menu">
@@ -52,7 +52,6 @@
       <div class="nav-grid-right">
         <div id="spaceMenu" class="right-menu">
           <span class="fa fa-search search-site"></span>
-          Search
           <input class="search-site-input" type="text" placeholder="search site..." aria-placeholder="search">
           <div class="right-menu-content hide">
             <ul>
