--- a/settings.html
+++ b/settings.html
@@ -22,13 +22,45 @@
           <div class="user-dropdown">
             <span class="fa fa-th-large"></span> <b>OpenShift.io</b> <span class="fa fa-angle-down"></span>
           </div>
-          <div class="center-menu-content hide knockout-top-to-bottom">
+          <div class="center-menu-content hide knockout-top-to-bottom" style="margin-left: 10px !important;">
             <ul>
               <li class="nav-dropdown-title">RECENT SPACES</li>
-              <li><span class="fa fa-th-large"></span> OpenShift.io</li>
-              <li><span class="fa fa-th-large"></span> JBoss</li>
-              <li><span class="fa fa-th-large"></span> iPaas</li>
-              <li><span class="fa fa-th-large"></span> OpenShift</li>
+              <li class="nav-dropdown-recent-spaces">
+                <div>
+                  <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
+                </div>
+                <div>
+                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <br />
+                  <a href="osio.html">
+                    <span class="nav-dropdown-recent-spaces-name">OpenShift</span>
+                  </a>
+                </div>
+              </li>
+              <li class="nav-dropdown-recent-spaces">
+                <div>
+                  <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
+                </div>
+                <div>
+                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <br />
+                  <div>
+                    <span class="nav-dropdown-recent-spaces-name">JBoss</span>
+                  </div>
+                </div>
+              </li>
+              <li class="nav-dropdown-recent-spaces">
+                <div>
+                  <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
+                </div>
+                <div>
+                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <br />
+                  <div>
+                    <span class="nav-dropdown-recent-spaces-name">iPaas</span>
+                  </div>
+                </div>
+              </li>
             </ul>
             <ul class="nav-dropdown-footer">
               <li>
