--- a/usersettings.html
+++ b/usersettings.html
@@ -19,7 +19,7 @@
       <div class="nav-grid-center">
         <div id="centerMenu" class="center-menu">
           <div class="user-dropdown">
-            <span class="fa fa-home"></span> <b>bdellasc</b> <span class="fa fa-angle-down"></span>
+            <img src="images/gravatar.jpg" style="border-radius: 50%; width: 25px;"> <b>bdellasc</b> <span class="fa fa-angle-down"></span>
           </div>
           <div class="center-menu-content hide knockout-top-to-bottom">
             <ul>
@@ -47,31 +47,38 @@
               <li class="nav-dropdown-title">RECENT SPACES</li>
               <li class="nav-dropdown-recent-spaces">
                 <div>
-                  <span class="fa fa-circle"></span>
+                  <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
+                </div>
+                <div>
+                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <br />
                   <a href="osio.html">
-                    <span>OpenShift</span>
+                    <span class="nav-dropdown-recent-spaces-name">OpenShift</span>
                   </a>
                 </div>
+              </li>
+              <li class="nav-dropdown-recent-spaces">
                 <div>
-                  bdellascio
+                  <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
+                </div>
+                <div>
+                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <br />
+                  <div>
+                    <span class="nav-dropdown-recent-spaces-name">JBoss</span>
+                  </div>
                 </div>
               </li>
               <li class="nav-dropdown-recent-spaces">
                 <div>
-                  <span class="fa fa-circle"></span>
-                  <span>JBoss</span>
+                  <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
                 </div>
                 <div>
-                  bdellascio
-                </div>
-              </li>
-              <li class="nav-dropdown-recent-spaces">
-                <div>
-                  <span class="fa fa-circle"></span>
-                  <span>bdellascio</span>
-                </div>
-                <div>
-                  iPaas
+                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <br />
+                  <div>
+                    <span class="nav-dropdown-recent-spaces-name">iPaas</span>
+                  </div>
                 </div>
               </li>
             </ul>
