add notification drawer

--- a/settings.html
+++ b/settings.html
@@ -13,6 +13,9 @@
     <link href="css/site.min.css" rel="stylesheet">
   </head>
   <body class="background-cover-space-settings">
+    <div class="notification-drawer">
+      <img src="images/notification-drawer.png" width="370px">
+    </div>
     <nav class="nav-grid space-navigation">
       <div class="nav-grid-left">
         <a href="index.html"><span class="fa fa-home"></span></a>
@@ -80,6 +83,7 @@
       <div class="nav-grid-right">
         <div id="spaceMenu" class="right-menu">
           <span class="fa fa-search search-site"></span>
+          <span id="notifications" class="fa fa-bell"></span>
           <input class="search-site-input" type="text" placeholder="search site..." aria-placeholder="search">
         </div>
       </div>
@@ -105,6 +109,7 @@
   </body>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   <!-- Site JavaScript -->
   <script src="js/site.min.js"></script>
 </html>
