--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link href="css/site.min.css" rel="stylesheet">
   </head>
   <body class="background-cover">
+    <div class="notification-drawer">
+      <img src="images/notification-drawer.png" width="370px">
+    </div>
     <nav class="nav-grid space-navigation">
       <div>
       </div>
@@ -42,6 +45,7 @@
             <span class="fa fa-th-large"></span> <span class="fa fa-angle-down"></span> |
           </span>
           <span class="fa fa-search search-site"></span>
+          <span id="notifications" class="fa fa-bell"></span>
           <input class="search-site-input" type="text" placeholder="search site..." aria-placeholder="search">
           <div class="right-menu-content hide knockout-top-to-bottom">
             <ul>
@@ -114,6 +118,7 @@
   </body>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   <!-- Site JavaScript -->
   <script src="js/site.min.js"></script>
 </html>
