Update list content

--- a/AllSpaces.html
+++ b/AllSpaces.html
@@ -28,13 +28,41 @@
           <div class="center-menu-content hide">
             <ul>
               <li class="nav-dropdown-title">RECENT SPACES</li>
-              <li>OpenShift</li>
-              <li>JBoss</li>
-              <li>iPaas</li>
-              <li>
-                <a href="osio.html">
-                  <span class="fa fa-home"></span> OpenShift.io
-                </a>
+              <li class="nav-dropdown-recent-spaces">
+                <div>
+                  <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
+                </div>
+                <div>
+                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <br />
+                  <a href="osio.html">
+                    <span class="nav-dropdown-recent-spaces-name">OpenShift</span>
+                  </a>
+                </div>
+              </li>
+              <li class="nav-dropdown-recent-spaces">
+                <div>
+                  <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
+                </div>
+                <div>
+                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <br />
+                  <div>
+                    <span class="nav-dropdown-recent-spaces-name">JBoss</span>
+                  </div>
+                </div>
+              </li>
+              <li class="nav-dropdown-recent-spaces">
+                <div>
+                  <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
+                </div>
+                <div>
+                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <br />
+                  <div>
+                    <span class="nav-dropdown-recent-spaces-name">iPaas</span>
+                  </div>
+                </div>
               </li>
             </ul>
             <ul class="nav-dropdown-footer">
