update menu content

--- a/usersettings.html
+++ b/usersettings.html
@@ -22,7 +22,7 @@
       <div class="nav-grid-center">
         <div id="centerMenu" class="center-menu">
           <div class="user-dropdown">
-            <img src="images/gravatar.jpg" style="border-radius: 50%; width: 25px;"> <b>bdellasc</b> <span class="fa fa-angle-down"></span>
+            <img src="images/gravatar.jpg" style="border-radius: 50%; width: 25px;"> <b>bobross_925</b> <span class="fa fa-angle-down"></span>
           </div>
           <div class="center-menu-content hide knockout-top-to-bottom">
             <ul>
@@ -54,10 +54,10 @@
                   <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
                 </div>
                 <div>
-                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <span class="nav-dropdown-recent-spaces-username">bobross_925</span>
                   <br />
                   <a href="osio.html">
-                    <span class="nav-dropdown-recent-spaces-name">OpenShift</span>
+                    <span class="nav-dropdown-recent-spaces-name">Lego activity at Summit</span>
                   </a>
                 </div>
               </li>
@@ -68,9 +68,9 @@
                 <div>
                   <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
                   <br />
-                  <div>
-                    <span class="nav-dropdown-recent-spaces-name">JBoss</span>
-                  </div>
+                  <a href="#">
+                    <span class="nav-dropdown-recent-spaces-name">Project Jupiter</span>
+                  </a>
                 </div>
               </li>
               <li class="nav-dropdown-recent-spaces">
@@ -80,9 +80,9 @@
                 <div>
                   <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
                   <br />
-                  <div>
-                    <span class="nav-dropdown-recent-spaces-name">iPaas</span>
-                  </div>
+                  <a href="#">
+                    <span class="nav-dropdown-recent-spaces-name">Developer site relaunch</span>
+                  </a>
                 </div>
               </li>
             </ul>
