--- a/AllSpaces.html
+++ b/AllSpaces.html
@@ -33,10 +33,10 @@
                   <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
                 </div>
                 <div>
-                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <span class="nav-dropdown-recent-spaces-username">bobross_925</span>
                   <br />
                   <a href="osio.html">
-                    <span class="nav-dropdown-recent-spaces-name">OpenShift</span>
+                    <span class="nav-dropdown-recent-spaces-name">Lego activity at Summit</span>
                   </a>
                 </div>
               </li>
@@ -47,9 +47,9 @@
                 <div>
                   <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
                   <br />
-                  <div>
-                    <span class="nav-dropdown-recent-spaces-name">JBoss</span>
-                  </div>
+                  <a href="#">
+                    <span class="nav-dropdown-recent-spaces-name">Project Jupiter</span>
+                  </a>
                 </div>
               </li>
               <li class="nav-dropdown-recent-spaces">
@@ -59,9 +59,9 @@
                 <div>
                   <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
                   <br />
-                  <div>
-                    <span class="nav-dropdown-recent-spaces-name">iPaas</span>
-                  </div>
+                  <a href="#">
+                    <span class="nav-dropdown-recent-spaces-name">Developer site relaunch</span>
+                  </a>
                 </div>
               </li>
             </ul>
