--- a/osio.html
+++ b/osio.html
@@ -23,9 +23,9 @@
       <div class="nav-grid-center">
         <div id="centerMenu" class="center-menu">
           <div class="user-dropdown">
-            <span class="fa fa-th-large"></span> <b>OpenShift.io</b> <span class="fa fa-angle-down"></span>
+            <span class="fa fa-th-large"></span> <b>Lego activity at Summit</b> <span class="fa fa-angle-down"></span>
           </div>
-          <div class="center-menu-content hide knockout-top-to-bottom" style="margin-left: 10px !important;">
+          <div class="center-menu-content hide knockout-top-to-bottom" style="margin-left: 65px !important;">
             <ul>
               <li class="nav-dropdown-title">RECENT SPACES</li>
               <li class="nav-dropdown-recent-spaces">
@@ -33,10 +33,10 @@
                   <img src="images/gravatar.jpg" class="nav-dropdown-recent-spaces-user">
                 </div>
                 <div>
-                  <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
+                  <span class="nav-dropdown-recent-spaces-username">bobross_925</span>
                   <br />
                   <a href="osio.html">
-                    <span class="nav-dropdown-recent-spaces-name">OpenShift</span>
+                    <span class="nav-dropdown-recent-spaces-name">Lego activity at Summit</span>
                   </a>
                 </div>
               </li>
@@ -47,9 +47,9 @@
                 <div>
                   <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
                   <br />
-                  <div>
-                    <span class="nav-dropdown-recent-spaces-name">JBoss</span>
-                  </div>
+                  <a href="#">
+                    <span class="nav-dropdown-recent-spaces-name">Project Jupiter</span>
+                  </a>
                 </div>
               </li>
               <li class="nav-dropdown-recent-spaces">
@@ -59,9 +59,9 @@
                 <div>
                   <span class="nav-dropdown-recent-spaces-username">bdellascio</span>
                   <br />
-                  <div>
-                    <span class="nav-dropdown-recent-spaces-name">iPaas</span>
-                  </div>
+                  <a href="#">
+                    <span class="nav-dropdown-recent-spaces-name">Developer site relaunch</span>
+                  </a>
                 </div>
               </li>
             </ul>
